--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "dentroguia",
   "private": true,
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -11,6 +12,7 @@
   "dependencies": {
     "axios": "^1.12.2",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
